...
            android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
...

        <TextView
            android:id="@+id/error_signup_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
...

        <TextView
            android:id="@+id/error_signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_firstname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
...

        <TextView
            android:id="@+id/error_signup_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_age"
                android:layout_width="match_parent"
                android:layout_height="50dp"
...

        <TextView
            android:id="@+id/error_signup_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_telephone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
...

        <TextView
            android:id="@+id/error_signup_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_university_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
...

        <TextView
            android:id="@+id/error_signup_university_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
...

        <TextView
            android:id="@+id/error_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:layout_marginBottom="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
...

        <TextView
            android:id="@+id/error_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
        <!-- Sign Up Button -->
        <Button
            android:id="@+id/signup_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
...
